see #11924 - add `Add-Exports` / `Add-Opens` manifest entries so the corresponding command line arguments (`--add-exports` / `--add-opens`) are not needed anymore
git-svn-id: http://josm.openstreetmap.de/svn/trunk@12205 0c6e7542-c601-0410-84e7-c038aed88b3b